# dotfiles

./: .gitconfig  main.hs
.config/GitHub Desktop/: .guid  Network Persistent State  TransportSecurity  window-state.json
.config/alacritty/: 1.yaml  2.yaml  3.yml  alacritty.yml
.config/awesome/: rc.lua
.config/bat/: config
.config/bspwm/: panel
.config/bspwm_/: bspwmrc
.config/conky/: br_main.Hattori.conky
.config/dconf/: user
.config/dmenu/: config.def.h  dmenu  dmenu.c
.config/fontconfig/: fonts.conf
.config/fvim/: config.json
.config/gh/: hosts.yml
.config/gpick/: autosave.gpa  settings.xml
.config/gtk-2.0/: gtkfilechooser.ini
.config/i3/: config  panel-bottom  panel-top
.config/kitty/: kitty.conf
.config/kitty2/: kitty.conf
.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
.config/nvim/: init.lua  lazy-lock.json
.config/nvim2/: lazy-lock.json
.config/picom/: picom.conf
.config/polybar/: config.ini  modules.ini  user_modules.ini
.config/polybar21/: config.ini  launch.sh  modules.ini
.config/xm/xmonad12/: LICENSE  README.md  config.cabal  stack.yaml  xmobarrc-0.hs  xmobarrc-1.hs  xmobarrc.hs  xmonad.hs  xmonad1.hs
.config/xm/xmonad12/.stack-work/: stack.sqlite3
.config/xm/xmonad12/.stack-work/install/x86_64-linux-tinfo6/fd1b58b8c12cfabd8242ce718af2800981648169db927c4163d244f2ab952ce0/9.2.5/pkgdb/: package.cache  xmobar-0.47.1-5JNYEcWj3p75Gt2SJCumB8.conf  xmonad-0.17.2.9-B4NIsE3Hstx5wIoqHVQyig.conf  xmonad-contrib-0.17.1.9-9EKI3x01RreBrFiWxOFLVO.conf
.config/xm/xmonad12/xmobar/: .woodpecker.yml  readme.org
.config/xm/xmonad12/xmobar/src/Xmobar/App/: Opts.hs
(+156 files in other folders)
